<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Intenciones</string>
    <string name="action_settings">Settings</string>

    <string name="abrirPaginaWeb">Abrir página Web</string>
	<string name="llamadaDeTelefono">Llamada de teléfono</string>
	<string name="googleMaps">Google Maps</string>
	<string name="tomarFoto">Tomar foto</string>
	<string name="mandarCorreo">Mandar correo</string>

</resources>
